repackaged lantorrent to be more pythonic

--- a/install
+++ b/install
@@ -115,12 +115,9 @@ if [ ! -f $CUMULUS_ENV ]; then
 fi
 
 export NIMBUS_HOME
-
+source $pyve_path/bin/activate
 export LANTORRENT_HOME=$NIMBUS_HOME/lantorrent
-mkdir $LANTORRENT_HOME
-cd $NIMBUS_SRC/lantorrent
-pwd
-$pyve_path/bin/python setup.py install | tee -a $NIMBUS_HOME/install.log
+$NIMBUS_SRC/lantorrent/install.sh $LANTORRENT_HOME | tee -a $NIMBUS_HOME/install.log
 rc=$PIPESTATUS
 if [ $rc -ne 0 ]; then
     echo "lantorrent install failed"
