Moved these more esoteric scripts to their own subdirectory

--- a/install
+++ b/install
@@ -41,9 +41,9 @@ if [ -d $NIMBUS_HOME ] && [ "$(ls -A $NIMBUS_HOME)" ]; then
         echo "The destination directory '$NIMBUS_HOME' exists and is not empty."
         echo "It is not recommended to reinstall Nimbus into an existing install."
         echo ""
-        echo "If you are making changes to the services, you can build and install those directly:"
+        echo "If you are making changes to the service code, you can build and install those directly:"
         echo "    export GLOBUS_LOCATION=$NIMBUS_HOME/services"
-        echo "    scripts/all-build-and-install.sh"
+        echo "    scripts/jars-build-and-install.sh"
         echo ""
         echo "If you know what you are doing and want to reinstall, edit this script:"
         echo "    $0"
