--- a/README.mkd
+++ b/README.mkd
@@ -1,3 +1,9 @@
+:warning: **The Nimbus infrastructure project is no longer under development.** :warning:
+
+For more information, please read the [news announcement](http://www.nimbusproject.org/news/#440). If you are interested in providing IaaS capabilities to the scientific community, see [CHI-in-a-Box](https://github.com/chameleoncloud/chi-in-a-box), a packaging of the [Chameleon testbed](https://www.chameleoncloud.org), which has been in development since 2014.
+
+---
+
 Nimbus
 ======
 
